Header section UI Issue fixed( overlapping on Admin Tab) !! Fixed

--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -109,7 +109,7 @@ body {
     color: #98a5ae;
     float: left;
     margin-left: 15px;
-    font-size: 18px;
+    font-size: 16px;
 
 
 
@@ -131,7 +131,7 @@ body {
   .date-info {
     position: absolute;
     right: 7px;
-    font-size: 18px;
+    font-size: 16px;
     padding-top: 20px;
     color: #98a5ae;
     float: left;
@@ -4226,7 +4226,7 @@ textarea.instruction {
 .navbar-default .date-info {
   position: absolute;
   right: 15px;
-  font-size: 18px;
+  font-size: 16px;
   padding-top: 20px;
   color: #98a5ae;
   float: left;
